5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1573_1333.log
== TEST (2019-03-13 14:09:23) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:11:19) 
-- CODE:
expressao "main.py"30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao "main.py"30 – 3 ** 2 + 8 // 3 ** 2 * 10
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:11:31) 
-- CODE:
expressao "main.py" 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao "main.py" 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:00:43) 
-- CODE:
expressao "main.py" 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao "main.py" 30 - 3 ** 2 + 8 // 3 ** 2 * 10
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:15:36) 
-- CODE:

print(20)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:15:53) 
-- CODE:

print(20)
-- EXECUTION TIME:
0.158852
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:16:37) 
-- CODE:
impressao 
print(20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    impressao 
NameError: name 'impressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:16:39) 
-- CODE:
impressao 
print(20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    impressao 
NameError: name 'impressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:16:42) 
-- CODE:
impressao 
print(20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    impressao 
NameError: name 'impressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:16:45) 
-- CODE:
impressao 
print(20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    impressao 
NameError: name 'impressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:17:20) 
-- CODE:
(impressao)main.py
print(20)
-- ERROR:
File "XXXX", line 1
    (impressao)main.py
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:17:32) 
-- CODE:
main.py
print(20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    main.py
NameError: name 'main' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:30:30) 
-- CODE:

print(11)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:30:39) 
-- CODE:

print(11)
-- EXECUTION TIME:
0.135382
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:30:49) 
-- CODE:
print(11)
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:30:52) 
-- CODE:
print(11)
-- EXECUTION TIME:
0.169309
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:33:09) 
-- CODE:
print(20,9)
-- OUTPUT:
20 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:33:20) 
-- CODE:
print(20.9)
-- OUTPUT:
20.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:33:24) 
-- CODE:
print(20.9)
-- EXECUTION TIME:
0.186825
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
20.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 19:36:13) 
-- CODE:
print(21)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:36:16) 
-- CODE:
print(21)
-- EXECUTION TIME:
0.145706
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
